autoform - true/false question

--- a/client/templates/course/lesson/quiz/questions/questionWrapper.html
+++ b/client/templates/course/lesson/quiz/questions/questionWrapper.html
@@ -2,7 +2,7 @@
     <div class="row question-wrapper-row">
         <div >
             {{#if isEditingCurrentCourse}}
-                <p><span class="badge">{{ questionIndex }}</span> Question type:
+                <p>Question type:
                     {{#if isTrueOrFalse}}
                                         True or False
                     {{else}}
