--- a/client/templates/course/lesson/quiz/questions/autoform/afFieldRadioWithTextInput.html
+++ b/client/templates/course/lesson/quiz/questions/autoform/afFieldRadioWithTextInput.html
@@ -1,21 +1,26 @@
 <template name="afFieldRadioWithTextInput">
     <div style="{{#if isHidden}}display: none{{/if}}" >
         <span class="radio-inline checkbox-inline">
-                {{#if isSingleAnswer}}
+
+                {{#if isMultipleAnswer }}
+                    <input type="checkbox"
+                           class="js-answer-option-checkbox"
+                           checked={{isSelected}}
+                    />
+                {{else}}
                     <input type="radio"
                            name="radioGroupName"
                            class="js-answer-option-radio"
                            id="isSelectedRb" checked={{isSelected}}/>
                 {{/if}}
-                {{#if isMultipleAnswer }}
-                    <input type="checkbox"
-                           class="js-answer-option-radio"
-                           checked={{isSelected}}
-                    />
-                {{/if}}
+
+                {{#if isTrueOrFalse}}
+                   <label>{{trueOrFalseLabel }}</label>
+                {{else}}
                 <input  type="text"
                         class="form-control js-answer-option-input"
                         id="title" placeholder="Enter answer" />
+                {{/if}}
         </span>
     </div>
 </template>
